style/style.css
body {
    font-family: "Roboto", sans-serif;
    font-weight: 400;
    color: #3A3F51;
    height: auto;
    background-color: rgba(237, 239, 238, 1);
}

ul {
    margin: 0px;
    padding: 0px;
    list-style: none;
}

a {
    text-decoration: none !important;
}

p h3{
    margin: 0;
    padding: 0;
    border: 0;
}

.app {
    max-width: 1680px;
    margin: auto;
}

/*NAV BAR*/
.navBar {
    position: fixed;
    z-index: 1;
    height: 60px;
    width: 100vw;
    padding-left: 100px;
    padding-right: 100px;
    background-color: rgba(255, 255, 255, 0.0);
    border-bottom-style: solid;
    border-color: rgba(255, 255, 255, 0.2);
    border-width: thin;
    opacity: 50%;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.navName {
    margin: 0px;
    color: white;
    text-shadow: 1px 1px black;
}

.navButtonsBox {
    margin: 0px;
    display: flex;
    justify-content: space-between;
    width: 500px;
}

.navButtons {
    background-color: rgba(255, 255, 255, 0);
    color: white !important;
    border: none;
    text-shadow: 1px 1px black;
}

@keyframes animatedBackground {
	from { background-position: 0 0; }
	to { background-position: 6000% 0; }
}

/*HOME SCREEN*/
.firstScreen {
    background-image: url(../img/background/home-background.jpg);
    position: relative;
    background-size: auto;
    background-position: top;
    height: 100vh;
    display: flex;

    background-repeat: repeat-x;
	animation: animatedBackground 2000s linear infinite;
}

.gradient {
    display: flex;
    align-items: center;
    min-height: 50vh;
    max-height: 100vh;
    width: 100vw;
    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.0), rgba(237, 239, 238, 1)); /* Standard syntax; must be last */
}

.bigTW {
    line-height: 60px;
    color: white;
    font-size: 48px;
    font-family: "Roboto", sans-serif;
    font-weight: 700;
    padding-left: 20px;
    height: 180px;
    text-shadow: 1px 1px black;
    overflow: visible;
}

/*ABOUT SCREEN*/
.aboutMe {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
    align-content: space-around;
    background-image: url(../img/background/about-background.jpg);
    background-position: top;
    background-size: cover;
    min-height: 100vh;
    padding-left: 80px;
    padding-right: 80px;
    padding-top: 20px;
}
.aboutTD {
    display: flex;
    flex-direction: column;
}

.aboutTitle {
    display: flex;
    font-family: "Roboto";
    font-weight: 300;
    font-size: 24px;
    margin-bottom: 0px;
    display: flex;
}

.aboutDesc {
    display: flex;
    font-family: "Roboto";
    font-weight: 100;
    font-size: 20px;
    color: #505050;
    margin-bottom: 0px;
    display: flex;
    justify-content: center;
    padding-top: 15px;
}

.skillsBox {
    display: flex;
    flex-flow: row;
    flex-wrap: wrap;
    justify-content: space-around;
    align-content: space-around;
    min-height: 60vh;
}

.skill {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
}
.icon {
    display: flex;
    height: 50px;
    width: 50px;
    margin-right: 20px;

}

.skillTitle {
    display: flex;
    color: #3A3F51;
    font-size: 20px;
    font-family: "Roboto";
    font-weight: 300;
    margin: 0;
}

.skillDesc {
    display: flex;
    font-family: "Roboto";
    font-weight: 100;
    font-size: 18px;
    width: 300px;
    color: #505050;
    margin: 0;
}

/*PROJECTS*/
.projectsBox {
    display: flex;
    flex-wrap: wrap;
    width: 100vw;
}

.projects {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    width: 100vw;
}

.intellihome {
    display: flex;
    width: 100vw;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    align-content: center;
    min-height: 100vh;
}

.iChallenge {
    width: 100vw;
    display: flex;
    flex-direction: row-reverse;
    justify-content: center;
    align-items: center;
    align-content: center;
    flex-wrap: wrap;
    min-height: 100vh;
}

.ButterflyKnifeFight {
    width: 100vw;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    align-content: center;
    min-height: 100vh;
}

.LOTR {
    width: 100vw;
    display: flex;
    flex-direction: row-reverse;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    align-content: center;
    min-height: 100vh;
}

.projectImage {
    width: 70vw;
    height: auto;
}

.infoBox {
    display: flex;
    flex-direction: column;
}

.projectTD {
}

.projectTitle {
    font-family: "Roboto";
    font-weight: 700;
    font-size: 64px;
    width: 200px;

}

.projectDesc {
    font-family: "Roboto";
    font-weight: 300;
    text-align: justify;
    line-height: 40px;
    font-size: 24px;
    width: 350px;
}

.projectButton {
    display: block;
    background-color: #202020;
    color: white !important;
    border: none;
    font-size: 32px;
    width: 250px;
    height: 75px;
    text-align: center;
    line-height: 75px;
    font-family: "Roboto";
    font-weight: 700;
}
/*CONTACT*/
.contact {
    display: flex;
    align-items: center;
    justify-content: center;
    background-image: url(../img/background/contact-background.jpg);
    background-position: top;
    background-size: cover;
    min-height: 100vh;
}

.contactBox {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    width: 97vw;
}

.contactMe {

}

.contactTitle {
    font-family: "Roboto";
    font-weight: 700;
    text-align: center;
    font-size: 108px;
    margin: 0px;
}

.contactDesc {
    font-family: "Roboto";
    font-weight: 300;
    text-align: center;
    padding-top: 50px;
    font-size: 24px;
    margin: 0px;
}

.methodBox {
    display: flex;
    justify-content: space-around;
    align-items: center;
    align-content: space-around;
    flex-wrap: wrap;
    width: 100vw;
    padding-top: 50px;
}

.contactMethod {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.methodImage {
    width: 99px;
    height: 99px;
}

.methodTitle {
    font-family: "Roboto";
    font-weight: 700;
    padding-top: 20px;
    margin: 0px;
    padding-bottom: 20px;
}

.methodHL {
    font-family: "Roboto";
    font-weight: 400;
    margin: 0px;
}

.Resume {
    font-size: 24px;
    padding-top: 50px;
}

/*Mobile devices*/
@media only screen  and (max-device-width: 640px) {
    /*Home*/
    .firstScreen {
        height: 68vh;
    }

    .bigTW {
        font-size: 72px;
        line-height: 100px;
        height: 300px;
    }

    /*About*/
    .aboutMe {
        padding: 50px;
        min-height: auto;
    }

    .aboutTitle {
        padding: 0;
        font-size: 56px;
    }

    .aboutDesc {
        font-size: 44px;
        padding: 0;
        padding-top: 20px;
    }

    .skillSection {
        padding-top: 50px;
    }

    .skill {
        padding-top: 50px;
        width: 100vw;
    }

    .icon {
        width: 200px;
        height: 200px;
    }

    .skillSection {
        padding-left: 82px;
    }

    .skillsBox {
        justify-content: flex-start;
    }

    .skillTitle {
        font-size: 60px;
    }

    .skillDesc {
        font-size: 40px;
        width: 60vw;
    }

    /*Projects*/
    .intellihome {
        min-height: 95vh;
    }

    .iChallenge {
        min-height: 90vh;
        margin-top: 50px;
        margin-bottom: 50px;
    }

    .ButterflyKnifeFight {
        min-height: 90vh;
        margin-top: 50px;
        margin-bottom: 50px;
    }

    .LOTR {
        min-height: 95vh;
        margin-top: 50px;
        margin-bottom: 50px;
    }

    .projectImage {
        min-width: 100vw;
    }

    .infoBox {
        justify-content: space-around;
        align-items: center;
        min-height: 45vh;
    }

    .projectButton {
        width: 45vw;
        height: 150px;
        font-size: 54px;
        line-height: 150px;
    }

    .projectTitle {
        font-size: 96px;
        width: 100%;
        text-align: center;


    }

    .projectDesc {
        font-size: 48px;
        width: 80vw;
        line-height: 70px;
        padding-top: 60px;
    }

    .contact {
        height: auto;
    }

    .contactTitle {
        font-size: 144px;
    }

    .contactDesc {
        font-size: 36px;
    }

    .methodBox {
        flex-direction: column;
        justify-content: space-around;
    }

    .contactMethod {
        margin-bottom: 100px;
    }

    .methodImage {
        width: 400px;
        height: 400px;
    }

    .methodTitle {
        padding-top: 50px;
        padding-bottom: 50px;
        font-size: 48px;
    }

    .methodHL {
        font-size: 48px;
    }
}

